Remove static dependecy of yaml-cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.9)
 project("Bilateral Teleoperation Ariadne")
 
 # Set to search the root source directory for the FindAriadne.cmake module
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
 # Set to look for includes in usr/local directory, required for GMP
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/local/include -g")
@@ -11,17 +11,15 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I/usr/local/include -g")
 # Set the C++ standard to C++17, as used by Ariadne
 set(CMAKE_CXX_STANDARD 17)
 
-# Find Ariadne as a required dependency
+# Find Ariadne and Yaml packages
 find_package(Ariadne REQUIRED)
+find_package(Yaml REQUIRED)
 
-# Add the Ariadne headers to the includes
-include_directories(SYSTEM ${ARIADNE_INCLUDE_DIRS})
-
-# DEPS
-add_subdirectory(deps/yaml-cpp yaml-cpp)
+# Add the Ariadne headers and Yaml headers to the includes
+include_directories(SYSTEM ${ARIADNE_INCLUDE_DIRS} ${YAML_INCLUDES})
 
 # Set the executable along with the required source files
-add_executable(main main.cpp defines.hpp deps/yaml-cpp/include/yaml-cpp/yaml.h)
+add_executable(main main.cpp defines.hpp )
 
-# Instruct to link against the ariadne library
-target_link_libraries(main ${ARIADNE_LIBRARIES} yaml-cpp)
+# Instruct to link against the ariadne and yaml libraries
+target_link_libraries(main ${ARIADNE_LIBRARIES} ${YAML_LIBRARIES})
