--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 # ENVIRONMENT
-QE: 0.1
-KE: 10.0
+QE: 10
+KE: 2.0
 BE: 0.5
 
 # OPERATOR
@@ -32,8 +32,10 @@ PM: 1
 DM: 1
 
 # SIMULATION
+TS: 0.01
+STEP_SIZE: 0.001
 TF_CONTINUOUS: 5
-TF_DISCRETE: 5
+TF_DISCRETE: 100000
 
 # PLOTS
 Y_MIN: -2
