--- a/config_sine.yml
+++ b/config_sine.yml
@@ -4,8 +4,8 @@ KE: 10.0
 BE: 0.5
 
 # OPERATOR
-PO: 1
-DO: 1
+PO: 7
+DO: 1.3
 FREQ: 1
 AMP: 2
 
@@ -35,7 +35,7 @@ DM: 1
 TS: 0.005
 STEP_SIZE: 0.001
 TF_CONTINUOUS: 5
-TF_DISCRETE: 100000
+TF_DISCRETE: 10000
 
 # PLOTS
 Y_MIN: -2
@@ -51,3 +51,18 @@ HD: 0.5
 ALPHA: 0.1
 BETA: 0.1
 H0: 0.6
+
+# LORENTZ
+LOR_SIGMA: 10.0
+LOR_BETA: 2.6667
+LOR_RHO: 28.0
+
+# FIXED PACKET LOSS
+START_LOSS: 2.3
+STOP_LOSS: 2.5
+
+# COMM. CHANNEL PARAMS
+LOWER: 0.9623
+UPPER: 47.8801
+WIDTH: 46.9177
+P: 0.62
