--- a/config_step.yml
+++ b/config_step.yml
@@ -61,3 +61,9 @@ LOR_RHO: 28.0
 # FIXED PACKET LOSS
 START_LOSS: 2.3
 STOP_LOSS: 2.5
+
+# COMM. CHANNEL PARAMS
+LOWER: 0.9623
+UPPER: 47.8801
+WIDTH: 46.9177
+P: 0.62
