--- a/config_sine.yml
+++ b/config_sine.yml
@@ -4,8 +4,8 @@ KE: 10.0
 BE: 0.5
 
 # OPERATOR
-PO: 7
-DO: 1.3
+PO: 1
+DO: 1
 FREQ: 1
 AMP: 2
 
@@ -34,7 +34,7 @@ DM: 1
 # SIMULATION
 TS: 0.005
 STEP_SIZE: 0.001
-TF_CONTINUOUS: 2
+TF_CONTINUOUS: 5
 TF_DISCRETE: 10000
 
 # PLOTS
@@ -52,7 +52,7 @@ ALPHA: 0.1
 BETA: 0.1
 H0: 0.6
 
-# LORENTZ
+# LORENZ
 LOR_SIGMA: 10.0
 LOR_BETA: 2.6667
 LOR_RHO: 28.0
@@ -65,4 +65,4 @@ STOP_LOSS: 2.5
 LOWER: 0.9623
 UPPER: 47.8801
 WIDTH: 46.9177
-P: 0.62
+P: 0.60
